# ado

./: .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  DEVELOPING.md  Dockerfile-gpu  pyproject.toml  requirements.txt  ruff.toml  tombi.toml  tox.ini
.cursor/commands/: review.md
backend/api/: README.md
examples/trim/custom_experiments/: pyproject.toml
plugins/actuators/sfttrainer/: pyproject.toml
plugins/actuators/sfttrainer/ado_actuators/sfttrainer/: README.md  actuators.py
plugins/actuators/sfttrainer/ado_actuators/sfttrainer/config/: models.yaml
plugins/actuators/sfttrainer/ado_actuators/sfttrainer/experiments/: common.py  full_finetune.py  gptq_lora.py  lora.py  prompt_tuning.py
plugins/actuators/sfttrainer/ado_actuators/sfttrainer/ray_env/: utils.py
plugins/actuators/sfttrainer/ado_actuators/sfttrainer/scripts/: check_model_weights.py  convert_weights.py  count_dataset_tokens.py  download_weights_from_dmf.py  generate_dataset.py  generate_vision_dataset.py  hash_models.py
plugins/actuators/sfttrainer/ado_actuators/sfttrainer/tests/: test_env_plugin.py  test_sfttrainer.py
plugins/actuators/sfttrainer/ado_actuators/sfttrainer/wrapper_fms_hf_tuning/: finetune.py
plugins/actuators/sfttrainer/ado_actuators/sfttrainer/wrapper_fms_hf_tuning/callbacks/: metrics_callbacks.py  metrics_tracker.py
plugins/actuators/sfttrainer/ado_actuators/sfttrainer/wrapper_fms_hf_tuning/scripts/: wrapper_sfttrainer.py
plugins/actuators/sfttrainer/ado_actuators/sfttrainer/wrapper_fms_hf_tuning/tuning_versions/: __init__.py  at_least_3_0_0.py  at_least_3_0_0_1.py
plugins/actuators/vllm_performance/: README.md  pyproject.toml
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/: actuator.py  actuator_parameters.py  env_manager.py  experiment_executor.py  experiments.yaml
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/experiments/: performance_testing.yaml
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/k8s/: create_environment.py  manage_components.py
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/k8s/yaml_support/: build_components.py  deployment.yaml
plugins/actuators/vllm_performance/ado_actuators/vllm_performance/vllm_performance_test/: execute_benchmark.py
plugins/actuators/vllm_performance/yamls/: discoveryspace_override_defaults_endpoint.yaml  vllm_actuator_configuration.yaml  vllm_deployment_space.yaml
plugins/custom_experiments/autoconf/: README.md  pyproject.toml
plugins/custom_experiments/autoconf/autoconf/: min_gpu_recommender.py
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/: README.md  changelog.md
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v1-1-0_ag-20251112_155927-refit-clone-opt/: learner.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v1-1-0_ag-20251112_155927-refit-clone-opt/models/: trainer.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v1-1-0_ag-20251112_155927-refit-clone-opt/models/NeuralNetTorch_FULL/: model.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v1-1-0_ag-20251112_155927-refit-clone-opt/models/WeightedEnsemble_L2_FULL/: model.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v2-0-0_ag-20251113_154241-refit-clone-opt/: learner.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v2-0-0_ag-20251113_154241-refit-clone-opt/models/: trainer.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v2-0-0_ag-20251113_154241-refit-clone-opt/models/CatBoost_FULL/: model.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v2-0-0_ag-20251113_154241-refit-clone-opt/models/NeuralNetTorch_FULL/: model.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v2-0-0_ag-20251113_154241-refit-clone-opt/models/WeightedEnsemble_L2_FULL/: model.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v2-0-0_ag-20251113_154241-refit-clone-opt/models/XGBoost_FULL/: model.pkl  xgb.ubj
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v3-0-0_ag-20260113_144447-clone-opt-train_frac_1/: learner.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v3-0-0_ag-20260113_144447-clone-opt-train_frac_1/models/: trainer.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v3-0-0_ag-20260113_144447-clone-opt-train_frac_1/models/NeuralNetTorch/: model.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v3-0-0_ag-20260113_144447-clone-opt-train_frac_1/models/WeightedEnsemble_L2/: model.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v3-1-0_ag-20260113_144232-refit-clone-opt-train_frac_1/: learner.pkl  metadata.json  modelcard.csv
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v3-1-0_ag-20260113_144232-refit-clone-opt-train_frac_1/models/: trainer.pkl
plugins/custom_experiments/autoconf/autoconf/AutoGluonModels/v3-1-0_ag-20260113_144232-refit-clone-opt-train_frac_1/models/CatBoost/: model.pkl
plugins/custom_experiments/autoconf/autoconf/test/: test_config_mapper.py  test_recommender.py
plugins/custom_experiments/autoconf/autoconf/utils/: recommender.py
plugins/custom_experiments/autoconf/autoconf/utils/autoconf_build/: ml_classifier.py
plugins/custom_experiments/autoconf/examples/: simple.yaml
plugins/custom_experiments/autoconf/examples/sweep/: operation.yaml  space.yaml
plugins/operators/ray_tune/: pyproject.toml
plugins/operators/ray_tune/ado_ray_tune/: config.py  doe.py  operator.py  rifferla.py  samplers.py  stoppers.py
plugins/operators/trim/: README.md  pyproject.toml
plugins/operators/trim/trim/: operator.py  trim_pydantic.py  trim_sampler.py
plugins/operators/trim/trim/utils/: logging_utils.py  space_df_connector.py
tests/: README.md
(+227 files in other folders)
