[project]
name = "trim_custom_experiments"
description = "A set of custom experiments used to test Trim Operation"
dynamic = ["version"]

[project.entry-points."ado.custom_experiments"]
# This should be python file with your decorated function(s).
trim_experiments = "trim_custom_experiments.experiments"
