[project]
name = "ado-sfttrainer"
description = "An actuator for benchmarking fine-tuning of foundation models"  # Change to describing your actuator
readme = "ado_actuators/sfttrainer/README.md"
requires-python = ">=3.10,<3.13"
dependencies = ["aim>=3.23.0", "jwt", "psutil", "transformers>=4.44.2"]
dynamic = ["version"]

[project.scripts]
sfttrainer_check_metrics_stability = "ado_actuators.sfttrainer.scripts.check_metrics_stability:app"
sfttrainer_download_hf_weights = "ado_actuators.sfttrainer.scripts.download_hf_weights:app"
sfttrainer_generate_dataset_text = "ado_actuators.sfttrainer.scripts.generate_dataset:app"
sfttrainer_generate_dataset_vision = "ado_actuators.sfttrainer.scripts.generate_vision_dataset:app"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true  # This is on by default, including it for clarity

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "build.*", "yamls"]

[tool.setuptools.package-data]
# Note: This is optional. If you don't specify it, every non python file that's in SCM will be added
sfttrainer = [
  "actuator_definitions.yaml",  # Required: The file that describes the actuator classes the plugin provides
]

[tool.setuptools_scm]
root = "../../../"
