[project]
name = "ado-vllm-performance"
description = "VLLM performance testing actuator"
readme = "README.md"
dependencies = [
  "ado-core",
  "datasets>=2.20.0",
  "guidellm>=0.5.3",
  "kubernetes >= 31.0.0",
  "vllm>=0.12.0",
]
# [tool.setuptools.dynamic]
# dependencies = {file = ["requirements.txt"]}
# Deps/Build-related section
dynamic = ["version"]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "pre-commit>=4.2.0",
  "ruff>=0.12.1",
]

# Required when added as a workspace package
# [tool.uv.sources]
# ado-core = { workspace = true }

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true  # This is on by default, including it for clarity

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "build.*", "yamls", "docker_image"]

[tool.setuptools.package-data]
# Note: This is optional. If you don't specify every non python file that's in SCM will be added
vllm_performance = [
  "actuator_definitions.yaml",  # Required: The file that describes the actuator classes the plugin provides
  "experiments.yaml",  # Optional file that contains definitions for experiment catalog
]

[tool.setuptools_scm]
root = "../../../"
