[project]
name = "ado-autoconf"
description = "An AutoConf plugin that suggests the minimum number of gpus necessary to execute a Tuning job"
dependencies = [
  "ado-core>=1.2.3",
  "autogluon.tabular[catboost,xgboost]==1.5.0",
  "cloudpickle",
  "fastai",
  "pandas<3.0.0",
  "pydantic",
  "torch",
]
dynamic = ["version"]

[project.entry-points."ado.custom_experiments"]
min_gpu_experiment = "autoconf.min_gpu_recommender"

[project.optional-dependencies]
libomp = ["autogluon.tabular[lightgbm]"]

[dependency-groups]
dev = [
  "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoconf"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "build.*", "yamls"]

[tool.uv.sources]
ado-core = { workspace = true }

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
pattern = "default-unprefixed"
fallback-version = "0.0.0"
tagged-metadata = true
dirty = true
bump = true
